# issuer-rust

./: .gitmodules  Cargo.toml  README.md
binaries/aarch64-apple-darwin/: issuer
issuer-wasm-bindings/: Cargo.toml
issuer-wasm-bindings/src/: lib.rs
main/: Cargo.toml
main/src/: issuer.rs  lib.rs  main.rs
