[package]
name = "hello-wasm"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
description = "A sample project with wasm-pack"
license = "MIT/Apache-2.0"
repository = "https://github.com/yourgithubusername/hello-wasm"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
issuer = { path = "../main"}
getrandom = { version = "0.2", features = ["js"] }
# chrono = { version = "0.4.23", features = ["wasmbind"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.64"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
