[package]
name = "holonym-wasm-issuer"
version = "0.1.0"
authors = ["Nanak Nihal Khalsa <nanak@holonym.id>"]
description = "WASM bindings to run a Holonym issuer"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
babyjubjub-rs = { version = "0.0.10", path = "../babyjubjub-rs", default-features = true }
issuer = { path = "../main"}
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
# chrono = { version = "0.4.23", features = ["wasmbind"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.64"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.60"
num-bigint = { version = "0.4", features = ["rand"]}
