[package]
name = "main"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ff = {package="ff_ce", version= "0.11", features = ["derive"]}
babyjubjub-rs = { version = "0.0.10", path = "../babyjubjub-rs", default-features = true }
num-bigint = { version = "0.4", features = ["rand"]}
hex = "0.4"
time = "0.1"