[package]
name = "issuer"
version = "0.1.0"
edition = "2021"

# [lib]
# name = "issuerlib"
# version = "0.1.0"
# edition = "2021"
# path = "src/lib.rs"

[dependencies]
ff = {package="ff_ce", version= "0.11", features = ["derive"]}
babyjubjub-rs = { version = "0.0.10", path = "../babyjubjub-rs", default-features = true }
num-bigint = { version = "0.4", features = ["rand"]}
hex = "0.4"
time = "0.1"
rand = "0.8.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.64"
bytes = "1.3.0"
num-traits = "0.2.15"
clap = "2.34.0"
aws-build = "0.10.0"
